<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ControllerChooserActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/grey_frame" >

        <LinearLayout
            android:id="@+id/main_top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sign_in_ip_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_ip_text" />

            <LinearLayout
                android:id="@+id/sign_in_ip_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:maxWidth="40dp"
                    android:id="@+id/sign_in_ip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/sign_in_ip_hint"
                    android:inputType="phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <EditText
                    android:id="@+id/sign_in_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_port_hint"
                    android:inputType="number"
                    android:text="@string/sign_in_port_default" />
            </LinearLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/sign_in_go" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/main_top_layout"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/logo_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/sign_up_caption"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_above="@id/logo_caption"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/floodlightcontroller" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>