<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
	    android:id="@+id/main_content"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:visibility="gone"
	    >
	    
	    <TableLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:shrinkColumns="1" >
	
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/switch_vendor"/>
	            
				<TextView 
			        android:id="@+id/switch_vendor"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:singleLine="true"/>
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/switch_revision"/>
	            
				<TextView 
			        android:id="@+id/switch_revision"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:singleLine="true"/>
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/switch_version"/>
	            
				<TextView 
			        android:id="@+id/switch_version"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:singleLine="true"/>
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/switch_serial"/>
	            
				<TextView 
			        android:id="@+id/switch_serial"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:singleLine="false"
			        android:maxLines="4"
			        android:ellipsize="end"/>
	        </TableRow>
	    </TableLayout>
	    
	    <include layout="@layout/switch_detail_lists"/>
		
	</LinearLayout>
	
	<include layout="@layout/loading_layout"/>
</FrameLayout>